--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.0.0",
     "jade": "~1.6.0",
     "twilio" : "",
-    "mongoose": "3.8.21"
+    "mongoose": "3.8.21",
+    "mongodb-uri" : "^0.9.7"
   }
 }
