--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.6.0",
     "twilio" : "",
     "mongoose": "3.8.21",
-    "mongodb-uri" : "^0.9.7"
+    "mongodb-uri" : "^0.9.7",
+    "sprintf-js" : "~1.0.2"
   }
 }
